Added list items

--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   </head>
   <body>
     <h1>git tut</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo cumque quos
+      quidem maiores sit quam, eligendi hic provident. Officia similique eveniet
+      libero voluptate voluptatibus harum soluta animi at corrupti hic expedita
+      doloribus facilis voluptatum debitis unde ad maiores saepe numquam porro
+      quasi explicabo laboriosam, sapiente repellendus nobis. Delectus,
+      obcaecati harum.
+    </p>
+
+    <ul>
+      <li>list item 1</li>
+      <li>list item 2</li>
+      <li>list item 3</li>
+    </ul>
   </body>
 </html>
