--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git Practice</title>
   </head>
   <body>
-    <h1>git tut</h1>
+    <h1>Awesome Git tut</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo cumque quos
       quidem maiores sit quam, eligendi hic provident. Officia similique eveniet
