--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li>list item 1</li>
       <li>list item 2</li>
       <li>list item 3</li>
+      <li>list item 4</li>
     </ul>
   </body>
 </html>
